# ProjetMathCpp

./: .gitignore  CMakeLists.txt  README.md  projet.cpp  projet.hpp
libRational/: CMakeLists.txt
libRational/include/: ratio.hpp
libRational/src/: ratio.cpp
myUnitTests/: CMakeLists.txt
myUnitTests/src/: rationalTest.cpp
rationalSamples/: CMakeLists.txt
rationalSamples/src/: main  main.cpp
